added ping endpoint
