# app.js
@@ -11,6 +11,7 @@ var users = require('./routes/users');
 var projects = require('./routes/projects');
 var contact = require('./routes/contact');
 var feedback = require('./routes/feedback');
+var ping = require('./routes/ping');
 
 var app = express();
 
@@ -32,6 +33,7 @@ app.use('/users', users);
 app.use('/projects', projects);
 app.use('/contact', contact);
 app.use('/feedback', feedback);
+app.use('/ping', ping);
 
 // catch 404 and forward to error handler
 app.use(function(req, res, next) {
