# swagger/swagger.json
@@ -34,6 +34,13 @@
               }]
           }
       },
+      "/ping": {
+        "get" : {
+            "summary": "ping the backend (so we can wake up the freebie dyno)",
+            "operationId": "getPing", 
+            "tags": ["ping"]
+        }
+      },
       "/projects": {
           "get" : {
               "summary": "list all projects",
